--- a/owl-carousel filter/index.html
+++ b/owl-carousel filter/index.html
@@ -32,7 +32,7 @@
         </ul>
 
         <div class="jo-carousel-box">
-            <div class="owl-carousel owl-theme jo-owl-carousel" id="cat-0">
+            <div class="owl-carousel owl-theme jo-owl-carousel owl-1" id="cat-0">
                 <div class="item bg-blue" data-cat="cat-1">CATE 01</div>
                 <div class="item bg-red" data-cat="cat-2">CATE 02</div>
                 <div class="item bg-red" data-cat="cat-2">CATE 02</div>
@@ -68,7 +68,7 @@
             </ul>
     
             <div class="jo-carousel-box">
-                <div class="owl-carousel owl-theme jo-owl-carousel" id="cat-0">
+                <div class="owl-carousel owl-theme jo-owl-carousel owl-2" id="cat-0">
                     <div class="item bg-blue" data-cat="cat-1">CATE 01</div>
                     <div class="item bg-red" data-cat="cat-2">CATE 02</div>
                     <div class="item bg-red" data-cat="cat-2">CATE 02</div>
